fixed card wrapping issue

--- a/output/style.css
+++ b/output/style.css
@@ -16,18 +16,11 @@ body {
   color: #fff;
 }
 
-.display-team {
-  display: grid;
-  /* grid-template-columns: 1fr 1fr 1fr; */
-  row-gap: 20px;
-  column-gap: 10px;
-}
-
 .employee-card {
-  margin: 15px;
+  margin-left: 10px;
   margin-top: 50px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  /* width: 350px; */
+  max-width: 3000px;
 }
 
 .card-header {
@@ -35,6 +28,7 @@ body {
   color: #fff;
   text-transform: capitalize;
   text-align: center;
+  max-width: 300px;
 }
 
 .card-header h3 {
